@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/libxslt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.2 2002/03/21 10:20:39 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.3 2002/04/16 13:52:07 seemant Exp $
+
+*libxslt-1.0.16 (16 Apr 2002)
+
+  16 Apr 2002; Seemant Kulleen <seemant@gentoo.org> libxslt-1.0.16.ebuild
+  files/digest-libxslt-1.0.16
+
+  Quick version update.
 
 *libxslt-1.0.14 (21 March 2002)
 
